--- a/NhaSachOnline/Views/Shared/_Layout.cshtml
+++ b/NhaSachOnline/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 </body>
 <footer >
     <div class="container">
-        &copy; 2023 - NhaSachOnline - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2023 - ReadX - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
 </html>
