--- a/NhaSachOnline/Views/Cart/Index.cshtml
+++ b/NhaSachOnline/Views/Cart/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Giỏ hàng của bạn";
 }
+
 <h1>Giỏ hàng của bạn</h1>
+<div id="cart-items"></div>
+
